Fix vertical alignment of event title in cell

--- a/src/less/componants/programme.less
+++ b/src/less/componants/programme.less
@@ -24,7 +24,7 @@
     text-align: center;
     cursor: pointer;
   }
-  .table > tbody > tr > td.event {
+  tbody > tr > td.event {
     vertical-align: middle;
   }
   .event-title {
