--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -5790,7 +5790,7 @@ button.close {
   text-align: center;
   cursor: pointer;
 }
-.program-table .table > tbody > tr > td.event {
+.program-table tbody > tr > td.event {
   vertical-align: middle;
 }
 .program-table .event-title {
